--- a/rdoc/tut.rdoc
+++ b/rdoc/tut.rdoc
@@ -1,5 +1,4 @@
-#
-# = Ruby/GSL Tutorial
-# 1. {Getting started}[link:rdoc/start_rdoc.html]
-#
-#
+= Ruby/GSL Tutorial
+1. {Getting started}[link:rdoc/start_rdoc.html]
+
+
